@@ -1,3 +1,4 @@
+3/02/2021 DH/BN: modified entities to be based on 2d array, modified print statement
 3/01/2021 DH/BN/CB: Added randomness to monster generation and added generate_entities_heap, started on next_turn
 2/28/2021 DH/BN: Added create_entities method and added monster generation
 2/22/2021 DH/BN/CB: Added print distance maps function in dungeon.c, and bugtested //1.03 assignment done
